--- a/app/index.html
+++ b/app/index.html
@@ -50,7 +50,7 @@
               <!-- ui-sref-active="active" --> 
             </div>
             <ul id="nav-mobile" class="right hide-on-med-and-down">
-              <li style="width: 200px;" ng-show="currentUser"><a class="dropdown-button" href="#!" data-activates="dropdown1"><i class="large mdi-action-account-circle"></i></a></li>
+              <li style="width: 200px;" ng-show="currentUser"><a class="dropdown-button" href="#!" data-activates="dropdown1"><i class="right large mdi-action-account-circle"></i></a></li>
               <li style="width: 200px;" ng-hide="currentUser"><button type="button" ng-click="go('signup')" class="btn btn-success navbar-btn btn-circle">Sign Up</button></li>
               <li style="width: 200px;"ng-hide="currentUser"><button type="button" ng-click="go('login')" class="btn btn-default navbar-btn">Sign In</button></li> 
             </ul>
