--- a/app/index.html
+++ b/app/index.html
@@ -23,6 +23,7 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
+    <header>
     <!-- Notifications -->
     <!-- <div id="notify" ng-if="alert()" ng-model="notify">
       <div class="alert alert-dismissable page-alert" ng-class="'alert-' + notify.type">
@@ -49,8 +50,8 @@
 
               <!-- ui-sref-active="active" --> 
             </div>
-            <ul id="nav-mobile" class="right hide-on-med-and-down">
-              <li style="width: 200px;" ng-show="currentUser"><a class="dropdown-button" href="#!" data-activates="dropdown1"><i class="right large mdi-action-account-circle"></i></a></li>
+            <ul id="nav-mobile" class="right center-align hide-on-med-and-down">
+              <li style="width: 200px;" ng-show="currentUser"><a class="dropdown-button" href="#!" data-activates="dropdown1"><i class="large mdi-action-account-circle"></i></a></li>
               <li style="width: 200px;" ng-hide="currentUser"><button type="button" ng-click="go('signup')" class="btn btn-success navbar-btn btn-circle">Sign Up</button></li>
               <li style="width: 200px;"ng-hide="currentUser"><button type="button" ng-click="go('login')" class="btn btn-default navbar-btn">Sign In</button></li> 
             </ul>
@@ -59,9 +60,12 @@
         </div>
       </nav>
     </div>
+    </header>
+    <main>
     <div style="padding-top: 80px;"class="container">
         <div ui-view=""></div>
     </div>
+    </main>
 
     <footer class="page-footer">
       <div class="container">
