fix home anchor

--- a/app/index.html
+++ b/app/index.html
@@ -44,7 +44,7 @@
             <div class="valign-demo valign-wrapper left">
               <a id="logo-container" href="#" class="brand-logo">
                 <div class="hide-on-med-and-down">
-                  <span style="padding-left: 20px;"class="left" ng-click="go('landing')">Reeel</span>
+                  <span style="padding-left: 20px;"class="left" ui-sref="landing">Reeel</span>
                 </div>
               </a>
 
