failed attempt for get authorization working

--- a/app/index.html
+++ b/app/index.html
@@ -121,6 +121,7 @@
         <script src="components/data/parseService.js"></script>
         <script src="components/data/userService.js"></script>
         <script src="components/data/screeningService.js"></script>
+        <script src="components/data/authService.js"></script>
         <script src="components/user/signup/signupController.js"></script>
         <script src="components/user/login/loginController.js"></script>
         <script src="components/user/recover/recoverPasswordController.js"></script>
@@ -128,6 +129,7 @@
         <script src="shared/ngAutocomplete.js"></script>
         <script src="components/landing/landingController.js"></script>
         <script src="components/screening/screeningController.js"></script>
+  
 
 
         <!-- TODO: Make directive for plugins -->
