--- a/app/index.html
+++ b/app/index.html
@@ -143,7 +143,9 @@
               selectMonths: true, // Creates a dropdown to control month
               selectYears: 15 // Creates a dropdown of 15 years to control year
             });
+            $('.parallax').parallax(); // Parallax
           });
+            
         </script>
     </body>
 </html>
