--- a/app/index.html
+++ b/app/index.html
@@ -52,6 +52,7 @@
               <!-- ui-sref-active="active" --> 
             </div>
             <ul class="right center-align hide-on-med-and-down">
+              <li><button ui-sref="screening.create" class="btn-floating btn-large waves-effect waves-light black" ><i class="mdi-content-add"></i></button></li>
               <li><a ui-sref="screening.index({ userId:currentUser.id })" class="right"> My Screenings </a></li>
               <li><a ui-sref="guestlist.index" class="right"> GuestLists </a></li>
               <li style="width: 200px;" ng-if="currentUser"><a class="dropdown-button" href="#!" data-activates="dropdown1"><i class="large mdi-action-account-circle"></i></a></li>
